# monogirl

./: .editorconfig  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
libs/monogirl_math/: Cargo.toml
libs/monogirl_math/src/: lib.rs
programs/monogirl_core/: Cargo.toml
programs/monogirl_core/src/: contexts.rs  errors.rs  events.rs  lib.rs  processor.rs  state.rs  utils.rs
scripts/: build.sh  test.sh
sdk/: .eslintrc.json  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: builder.ts  client.ts  index.ts  types.ts  validation.ts  verifier.ts
tests/: cpe.test.ts  sdk.test.ts
