# dep update
[workspace]
members = [
    "programs/monogirl_core",
    "libs/monogirl_math",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/mgirl-labs/monogirl"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.0"
solana-sdk = "=1.17.0"
borsh = "0.10.3"
thiserror = "1.0"
sha2 = "0.10"
