[package]
name = "monogirl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for monogirl CPE bundle creation and verification"

[[bin]]
name = "monogirl-cli"
path = "src/main.rs"

[dependencies]
monogirl-math = { path = "../libs/monogirl_math" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { workspace = true }
thiserror = { workspace = true }
